--- a/nvim/todo
+++ b/nvim/todo
@@ -1,7 +1,8 @@
 soon
 - treesitter
 - lspsaga? (figure out what that is)
-- 
+- diagnostics
+- autocommand loader (like keymap loader)
 
 eventually
 - neotest
