--- a/nvim/todo
+++ b/nvim/todo
@@ -4,5 +4,13 @@ soon
 - diagnostics
 - autocommand loader (like keymap loader)
 
+- keymaps
+  - more lasagna functions
+  + jump to end of line in insert mode
+  - insert new line in normal mode
+  - better exiting of terminal
+- automatic tabbing in editor
+- tabs for buffers
+
 eventually
 - neotest
